[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pystreaming"
version = "1.3.2"
description = "Video + Audio streaming done with ZMQ"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Joseph Li", email = "jxli@andrew.cmu.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]
dependencies = [
    "numpy",
    "pyzmq",
    "PyTurboJPEG",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "ty>=0.0.1",  # Type checker
    "Pillow",  # Required for test_testimages
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme",
]
optional = [
    "opencv-python",
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/joseph-x-li/pystreaming"
Documentation = "https://pystreaming.readthedocs.io/"
Repository = "https://github.com/joseph-x-li/pystreaming"

[tool.hatchling.build.targets.wheel]
packages = ["pystreaming"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in multiprocessing)
    "ARG002", # unused method argument
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["pystreaming"]

# Type checking is done via 'uvx ty check' command (ty is a standalone tool)
# Exclude manual_tests and docs from type checking
# Run: uvx ty check pystreaming

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pystreaming --cov-report=term-missing --cov-report=html"
